--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-  <hed>
+  <head>
 
   </head>
   <body>
-   <h1>Hola ch18 y Git</h1>
+    <h1>Hola ch18 y Git</h1>
+    <script src="myscript.js"></script>
   </body>
 </html>
 
